# multi-bind

./: Cargo.toml
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
ruby-ext/: .gitignore  README.md  build.rs
ruby-ext/lib/: main.rb
ruby-ext/src/: lib.rs
ruby-ffi/: Cargo.toml  Gemfile  README.md
ruby-ffi/lib/: main.rb  multi_bind.rb
ruby-ffi/src/: lib.rs
src/: lib.rs
