[tool.poetry]
name = "multi-bind-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
maturin = "^1.7.4"


[tool.poetry.group.dev.dependencies]
maturin = "^1.7.4"

[build-system]
requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
build-backend = "maturin"
